fix: optimize order process for nobody user on mobile devices
Related: quiqqer/order-guestorder#6

--- a/src/QUI/ERP/Order/Controls/OrderProcess.css
+++ b/src/QUI/ERP/Order/Controls/OrderProcess.css
@@ -380,23 +380,34 @@
         display: block;
     }
 
-    .quiqqer-order-ordering-nobody-tabs__aside {
-        margin-bottom: 3rem;
-    }
-
     .quiqqer-order-ordering-nobody-tabs__aside,
-    .quiqqer-order-ordering-nobody-tabs__main    {
+    .quiqqer-order-ordering-nobody-tabs__main {
         width: 100%
     }
 
     .quiqqer-order-ordering-nobody-tabNav {
-        /*display: flex;*/
-        padding-block: 1rem;
-        overflow: auto;
-        white-space: nowrap;
+
     }
 
-    .quiqqer-order-ordering-nobody-tabNav__desc {
+    .quiqqer-order-ordering-nobody-tabs-main__item {
         display: none;
+    }
+
+    .quiqqer-order-ordering form {
+        height: initial;
+    }
+
+    .quiqqer-order-ordering-nobody-tabNav__entry > :where(a) {
+        background: #f8f8f8;
+    }
+
+    /* back btn */
+    .quiqqer-order-ordering-nobody-tabs-main__btnBack {
+        display: inline-block;
+        margin-top: 1rem;
+    }
+
+    .quiqqer-order-ordering-nobody-tabs-main__btnBack > .fa {
+        margin-right: 0.5em;
     }
 }
